1.3.8 - Unreleased
==================

- Respect timezone by using full ISO8601 date in collection tables
  (backported from Plone 4.0)
  [tom_gross]

1.3.7 - 2010-07-28
==================

- Make sure the atct_album_view calls getText with a full acquisition
  chain to avoid an AttributeError: kupu_captioned_image, but avoid
  getting the text field from an acquisition parent.  This fixes
  http://dev.plone.org/plone/ticket/8463
  and refs http://dev.plone.org/plone/ticket/8190
  [maurits]

1.3.6 - 2010-05-12
==================

- Topic.queryCatalog kwargs limit existing criterias for real. This is a merge
  of collective.dancing topic monkey patch with a test.
  [toutpt] [vincentfretin]

1.3.5 - 2010-05-01
==================

- Values in dropdown "criterion_type" in criterion_edit_form template are now
  properly translated. This closes http://dev.plone.org/plone/ticket/9715
  Backported from trunk, fixed in 2.0b9.
  [vincentfretin]

- Respect "show content type icons" setting for collection table view.
  This fixes http://dev.plone.org/plone/ticket/9630.
  [dukebody]

1.3.4 - 2009-09-22
==================

- Fix my previous Chameleon fix in criterion_edit_form.cpt, which broke
  creation of new criteria. This closes http://dev.plone.org/ticket/9522
  [davisagli]

1.3.3 - 2009-09-06
==================

- Subtopics shouldn't always acquire the 'start' query. Fixes 
  http://dev.plone.org/plone/ticket/8827 
  [pelle]

- Internationalized "Also in this section" in atct_topic_subtopics.pt.
  This closes http://dev.plone.org/plone/ticket/8383
  [massimo]

- Modified lib/constraintypes.py:getDefaultAddableTypes method to check
  isConstructionAllowed only for allowed types, not for all content types
  in portal_types. isConstructionAllowed was called twice for each types.
  [vincentfretin]

- Fix XHTML error in criterion_edit_form.cpt
  [davisagli]

1.3.2 - 2009-05-20
==================

* Added proper multi-lingual handling to the reference criterion. It should